tests/ui/attributes/linkage.stderr
error: `#[linkage]` attribute cannot be used on type aliases
  --> $DIR/linkage.rs:7:1
   |
LL | #[linkage = "weak"]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[linkage]` can be applied to foreign statics, functions, and statics

error: `#[linkage]` attribute cannot be used on modules
  --> $DIR/linkage.rs:10:1
   |
LL | #[linkage = "weak"]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[linkage]` can be applied to foreign statics, functions, and statics

error: `#[linkage]` attribute cannot be used on structs
  --> $DIR/linkage.rs:13:1
   |
LL | #[linkage = "weak"]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[linkage]` can be applied to foreign statics, functions, and statics

error: `#[linkage]` attribute cannot be used on inherent impl blocks
  --> $DIR/linkage.rs:16:1
   |
LL | #[linkage = "weak"]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[linkage]` can be applied to foreign statics, functions, and statics

error: `#[linkage]` attribute cannot be used on expressions
  --> $DIR/linkage.rs:24:5
   |
LL |     #[linkage = "weak"]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[linkage]` can be applied to foreign statics, functions, and statics

error: `#[linkage]` attribute cannot be used on closures
  --> $DIR/linkage.rs:40:13
   |
LL |     let _ = #[linkage = "weak"]
   |             ^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[linkage]` can be applied to foreign functions, foreign statics, functions, methods, and statics

error: aborting due to 6 previous errors

